--- a/3.LibManagementApp/src/common/view/IssuedBookDetail.form
+++ b/3.LibManagementApp/src/common/view/IssuedBookDetail.form
@@ -108,6 +108,9 @@
                     </Property>
                     <Property name="text" type="java.lang.String" value="Back"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabel6MouseClicked"/>
+                  </Events>
                 </Component>
               </SubComponents>
             </Container>
